# defender-dash-screen

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig.defaults
documentation/: Defender-Dashboard-Screen-Plan.docx
lib/Config/: DEV_Config.h
lib/LCD/: LCD.c  LCD.h
main/: CMakeLists.txt  Kconfig.projbuild  lvgl_port.c  lvgl_port.h  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/can/: can_bus.c  can_bus.h
main/data/: vehicle_state.c  vehicle_state.h
main/fonts/: font_andale_mono_16.c  font_andale_mono_20.c  font_eurostile_96.c  fonts.h
main/icons/: icon_defs.c  icon_defs.h  icons.h  img_abs.c  img_arrow_left.c  img_arrow_right.c  img_battery_12v.c  img_battery_balance.c  img_book_wrench.c  img_brake_warning.c  img_charge_ccs2.c  img_cup_heat.c  img_engine.c  img_ev_charger.c  img_hazard.c  img_high_beam.c  img_hv_battery_warn.c  img_hvil.c  img_jaunt_logo.c  img_parking_brake.c  img_parking_brake_slash.c  img_parking_light.c  img_seatbelt.c  img_thermo_cold.c  img_thermo_hot.c  img_traction_control.c
main/ui/: ui_gear_display.c  ui_gear_display.h  ui_main.c  ui_main.h  ui_status_screen.c  ui_status_screen.h  ui_styles.c  ui_styles.h  ui_warning_grid.c  ui_warning_grid.h
partition_table/: partition-table.csv
simulator/: index.html
